# image-storage-service

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
infra/: template.yaml
openapi/: api.yaml
scripts/: bootstrap.sh
seed/: cleanup_images.py  seed_images.py
seed/data/: images.json
src/: __init__.py  requirements.txt
src/core/filters/: in_memory_image_filter.py  name_contains_filter.py  offset_pagination.py
src/core/infrastructure/adapters/: dynamodb_adapter.py  s3_adapter.py
src/core/infrastructure/aws/: dynamodb_metadata.py  s3_image_storage.py
src/core/models/: errors.py  image.py  pagination.py
src/core/repositories/: metadata_repository.py  storage_repository.py
src/core/utils/: constants.py  decorators.py  mime.py  response.py  time.py  validators.py
src/handlers/delete_image/: handler.py  models.py  service.py
src/handlers/get_image/: handler.py  models.py  service.py
src/handlers/list_image/: handler.py  models.py  service.py
src/handlers/list_images/: handler.py  service.py
src/handlers/upload_image/: handler.py  models.py  service.py
tests/: conftest.py
tests/core/: test_mime.py  test_response.py  test_validators.py
tests/core/filters/: test_in_memory_image_filter.py  test_offset_pagination.py
tests/core/infrastructure/adapters/: test_dynamodb_adapter.py  test_s3_adapter.py
tests/core/infrastructure/aws/: test_dynamodb_metadata.py  test_s3_image_storage.py
tests/core/models/: test_errors.py  test_image_metadata.py  test_pagination_model.py
tests/e2e/: conftest.py  e2e_api_client.py  test_authentication.py  test_complete_lifecycle.py  test_delete_endpoint.py  test_error_responses.py  test_get_endpoint.py  test_list_endpoint.py  test_upload_endpoint.py
tests/functional/: conftest.py
tests/functional/core/: test_decorators.py  test_response.py  test_time_utils.py  test_validators.py
tests/functional/core/filters/: test_in_memory_image_filter.py  test_name_contains_filter.py
tests/functional/core/infrastructure/adapters/: test_dynamodb_adapter.py
tests/functional/core/infrastructure/aws/: test_dynamodb_metadata.py  test_s3_image_storage.py
tests/functional/core/models/: test_errors.py  test_image_metadata.py  test_pagination_model.py
tests/functional/handlers/delete_image/: test_delete_handler.py  test_delete_service.py
tests/functional/handlers/get_image/: test_get_handler.py  test_get_models.py  test_get_service.py
tests/functional/handlers/list_images/: test_list_handler.py  test_list_models.py  test_list_service.py
tests/functional/handlers/upload_image/: test_upload_handler.py  test_upload_models.py  test_upload_service.py
tests/handlers/: conftest.py
tests/handlers/delete_image/: test_delete_handler.py  test_delete_models.py  test_delete_service.py
tests/handlers/get_image/: test_get_handler.py  test_get_models.py  test_get_service.py
tests/handlers/list_image/: test_list_handler.py  test_list_models.py  test_list_service.py
tests/handlers/upload_image/: test_upload_handler.py  test_upload_models.py  test_upload_service.py
