# -------------------------------------------------
# Project metadata (PEP 621)
# -------------------------------------------------
[project]
name = "image-storage-service"
version = "0.1.0"
description = "Serverless image upload and management service"
authors = [
  { name = "Bharat Kumar", email = "kumar.bhart28@gmail.com" }
]
requires-python = ">=3.10,<4.0"
dynamic = ["dependencies"]

# -------------------------------------------------
# Poetry configuration
# -------------------------------------------------
[tool.poetry]
package-mode = false

# -------------------------------------------------
# Runtime dependencies (Lambda-safe)
# -------------------------------------------------
[tool.poetry.dependencies]
boto3 = "^1.34.0"
pydantic = "^2.6.0"
aws-lambda-powertools = { version = "^2.35.0", extras = ["tracer"] }

# -------------------------------------------------
# Dev / tooling dependencies (NOT shipped to Lambda)
# -------------------------------------------------
[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.3"

ruff = "^0.6.0"
mypy = "^1.9.0"
types-boto3 = "^1.0.0"
types-requests = "^2.31.0.20240106"

pre-commit = "^3.7.0"

# Local AWS tooling (local only)
localstack = "^3.4.0"
aws-sam-cli = { version = "^1.148.0", python = ">=3.10,<3.14" }
awscli = "^1.34.0"

mypy-boto3-dynamodb = "^1.34.0"
moto = { extras = ["boto3"], version = "^5.0.0" }

# -------------------------------------------------
# Ruff (Python 3.10 aligned)
# -------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
  ".venv",
  "venv",
  "env",
  "__pycache__",
  ".aws-sam",
  "localstack-data",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",   # import sorting (isort)
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-sort-within-sections = true


# -------------------------------------------------
# mypy (Static type checking – Python 3.10)
# -------------------------------------------------
[tool.mypy]
python_version = "3.10"
check_untyped_defs = true

disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

no_implicit_optional = true
strict_optional = true

mypy_path = ["src"]
explicit_package_bases = true
namespace_packages = true

exclude = [
  ".venv",
  "venv",
  "env",
  "__pycache__",
  ".aws-sam",
  "localstack-data",
]

[[tool.mypy.overrides]]
module = "botocore.*"
ignore_missing_imports = true

# -------------------------------------------------
# pytest
# -------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

env = [
  "AWS_REGION=us-east-1",
  "AWS_DEFAULT_REGION=us-east-1",
  "AWS_ENDPOINT_URL=http://localhost:4566",
  "IMAGE_METADATA_TABLE_NAME=image-storage-metadata-snd",
  "IMAGE_S3_BUCKET_NAME=image-storage-images-snd",
  "ENVIRONMENT=snd",
  "POWERTOOLS_LOG_LEVEL=INFO",
  "POWERTOOLS_SERVICE_NAME=image-storage",
  "POWERTOOLS_METRICS_NAMESPACE=image-storage-snd",
]

# -------------------------------------------------
# coverage
# -------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class .*\\bProtocol\\):",
]
precision = 2

# -------------------------------------------------
# build system
# -------------------------------------------------
[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
